Finishing touches to HTML and CSS

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
                 <h3 id="AboutMe">About Me</h3>
             </section>
             <section class="content">
-                <img src="./assets/images/male-avatar-man.svg" alt="male avatar">
-                <p class="section1content">Hello! My name is Jared Woodcock and I am an aspiring Web Developer.</p>
-                <p class="section1content">I have obtained a Bachelor's of Science in Accounting and am currently enrolled in the WashU full-stack coding bootcamp.</p>
+                <img src="./assets/images/male-avatar-man.svg" alt="male avatar" class="imgAvatar">
+                <p>Hello! My name is Jared Woodcock and I am an aspiring Web Developer.</p>
+                <p>I have obtained a Bachelor's Degree in Accounting and am currently enrolled in the WashU full-stack coding bootcamp. I have been an avid sports fan my whole life, playing both basketball and baseball throughout school, plus basketball in college. My favorite things to do are spending time with family and friends, playing with my dogs, and playing golf on the weekends.</p>
+                <p>Now that you know a little bit about me, feel free to review some of my work that you will find below.</p>
             </section>
         </section>
         
@@ -38,11 +39,11 @@
                 <h3 id="MyWork">My Work</h3>
             </section>
             <section class="content">
-                <img src="./assets/images/9504688_26690.jpg" alt="Coming soon image" class="img1">
-                <img src="./assets/images/9504688_26690.jpg" alt="Coming soon image">
-                <img src="./assets/images/9504688_26690.jpg" alt="Coming soon image">
-                <img src="./assets/images/9504688_26690.jpg" alt="Coming soon image">
-                <img src="./assets/images/9504688_26690.jpg" alt="Coming soon image">
+                <a href="https://"><img src="./assets/images/9504688_26690.jpg" alt="Coming soon image" title="Project #1" class="img1"></a>
+                <a href="https://"><img src="./assets/images/9504688_26690.jpg" alt="Coming soon image" title="Project #2" class="img2"></a>              
+                <a href="https://"><img src="./assets/images/9504688_26690.jpg" alt="Coming soon image" title="Project #3" class="img2"></a>
+                <a href="https://"><img src="./assets/images/9504688_26690.jpg" alt="Coming soon image" title="Project #4" class="img2"></a>
+                <a href="https://"><img src="./assets/images/9504688_26690.jpg" alt="Coming soon image" title="Project #5" class="img2"></a>
             </section>
         </section>
 
