--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <section class="content">
                 <img src="./assets/images/male-avatar-man.svg" alt="male avatar" class="imgAvatar">
                 <p>Hello! My name is Jared Woodcock and I am an aspiring Web Developer.</p>
-                <p>I have obtained a Bachelor's Degree in Accounting and am currently enrolled in the WashU full-stack coding bootcamp. I have been an avid sports fan my whole life, playing both basketball and baseball throughout school, plus basketball in college. My favorite things to do are spending time with family and friends, playing with my dogs, and playing golf on the weekends.</p>
+                <p>I have obtained a Bachelor's Degree in Accounting and am currently enrolled in the WashU full-stack coding bootcamp. I have been an avid sports fan my whole life, playing both basketball and baseball throughout school, and continuing to play basketball in college. My favorite things to do are spending time with family and friends, playing with my dogs, and playing golf on the weekends.</p>
                 <p>Now that you know a little bit about me, feel free to review some of my work that you will find below.</p>
             </section>
         </section>
