Added in first project to my work

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h3 id="MyWork">My Work</h3>
             </section>
             <section class="content">
-                <a href="https://"><img src="./assets/images/9504688_26690.jpg" alt="Coming soon image" title="Project #1" class="img1"></a>
+                <a href="https://executorkarthan.github.io/sipsync/"><img src="./assets/images/SipSync Demo Video.gif" alt="Coming soon image" title="Project #1" class="img1"></a>
                 <a href="https://"><img src="./assets/images/9504688_26690.jpg" alt="Coming soon image" title="Project #2" class="img2"></a>              
                 <a href="https://"><img src="./assets/images/9504688_26690.jpg" alt="Coming soon image" title="Project #3" class="img2"></a>
                 <a href="https://"><img src="./assets/images/9504688_26690.jpg" alt="Coming soon image" title="Project #4" class="img2"></a>
